@@ -13,6 +13,7 @@ Hbase Change Log
    HBASE-563   TestRowFilterAfterWrite erroneously sets master address to
                0.0.0.0:60100 rather than relying on conf
    HBASE-507   Use Callable pattern to sleep between retries
+   HBASE-564   Don't do a cache flush if there are zero entries in the cache.
 
   NEW FEATURES
    HBASE-548   Tool to online single region
